fix: update layout and styling to prevent navbar from covering content

--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -50,6 +50,14 @@ a {
     }
 }
 
+.navbar > .container {
+    max-width: 100vw;
+    @media(max-width: 1124px) {
+        font-size: $base * .9;
+        padding: 0;
+    }
+}
+
 #mainNav {
     font-family: 'Hack', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     margin-bottom: 0;
